[Theme] Add comment via Gitalk

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,9 @@
 <link rel="stylesheet" href="{{ "https://dbarobin.com/css/main.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="https://dbarobin.com/assets/awesome/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://dbarobin.com/assets/css/robin.css">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+
 <!--
 <link rel="stylesheet" type="text/css" href="/assets/css/fonts-open-sans.css">
 -->
