--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,6 +66,25 @@ layout: default
 </script>
 -->
 
+<!-- Gitalk start  -->
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+<div id="gitalk-container">
+  <script type="text/javascript">
+  const gitalk = new Gitalk({
+    clientID: 'afa95ce1461d979af1e5',
+    clientSecret: 'f0bc66e710f928035738bff9c2a1826a0e35de2c',
+    repo: 'dbarobin.github.io',
+    owner: 'dbarobin',
+    admin: ['dbarobin'],
+    id: location.pathname,      // Ensure uniqueness and length less than 50
+    distractionFreeMode: true  // Facebook-like distraction free mode
+  })
+
+  gitalk.render('gitalk-container')
+  </script>
+</div>
+<!-- Gitalk end  -->
+
 {%if page.comments %}
   {% assign sorted_comments = (page.comments | sort: 'date') %}
 {% endif %}
