--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,7 +77,7 @@ layout: default
     owner: 'dbarobin',
     admin: ['dbarobin'],
     id: location.pathname,      // Ensure uniqueness and length less than 50
-    distractionFreeMode: true  // Facebook-like distraction free mode
+    distractionFreeMode: false  // Facebook-like distraction free mode
   })
 
   gitalk.render('gitalk-container')
