--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,7 +76,7 @@ layout: default
     repo: 'dbarobin.github.io',
     owner: 'dbarobin',
     admin: ['dbarobin'],
-    id: location.pathname,      // Ensure uniqueness and length less than 50
+    id: md5(location.pathname),      // Ensure uniqueness and length less than 50
     distractionFreeMode: true  // Facebook-like distraction free mode
   })
 
