--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,6 +67,7 @@ layout: default
 -->
 
 <!-- Gitalk start  -->
+<script src="https://dbarobin.com/assets/js/md5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 <div id="gitalk-container">
   <script type="text/javascript">
