--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,8 @@
 </title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <meta name="keywords" content="{{ site.keywords }}">
-<meta property="og:title" content="DBA@Robin, MySQL DBA" />
-<meta property="og:type" content="Blog, Focus on Database." />
+<meta property="og:title" content="Cryptospace" />
+<meta property="og:type" content="Blockchain,Cryptocurrency,Bitcoin" />
 <meta property="og:url" content="https://dbarobin.com/" />
 <meta property="og:image" content="https://dbarobin.com/images/wentasy.png" />
 
