[Theme] Update link

--- a/_includes/Links.html
+++ b/_includes/Links.html
@@ -1,6 +1,6 @@
 <div class="sidebar-module">
     <h4>网站推荐</h4>
-    <a href="https://www.binance.net/cn/markets?ref=11190872" title="Binance，币安，强烈推荐的数字货币交易所" target="_blank">币安</a>
+    <a href="https://www.binance.net/cn/register/?ref=11190872" title="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易，目前上架的币种数量为 166 个。" target="_blank">币安</a>
     <a href="https://www.huobi.co/zh-cn/topic/invited/?invite_code=szre3" title="火币，OTC 成交量最大的交易所" target="_blank">火币</a>
     <a href="https://www.gate.io/signup/619472" title="The Gate of Blockchain Assets Exchange" target="_blank">Gate.io</a>
     <a href="https://www.vultr.com/?ref=8028399-4F" title="VPS 推荐" target="_blank">Vultr</a>
