[Theme] Replace image

--- a/_includes/Binance.html
+++ b/_includes/Binance.html
@@ -1,4 +1,4 @@
 <div class="sidebar-module">
   <h4>币安注册</h4>
-  <a target="_blank" href="https://www.binance.net/cn/register/?ref=11190872"><img title="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易" src="https://cdn.dbarobin.com/binance.jpeg" alt="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易"/></a>
+  <a target="_blank" href="https://www.binance.net/cn/register/?ref=11190872"><img title="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易" width="200" height="113" src="https://cdn.dbarobin.com/OYFhwAD.jpg" alt="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易"/></a>
 </div>
