[Binance] Change binance domain

--- a/_includes/Links.html
+++ b/_includes/Links.html
@@ -1,6 +1,6 @@
 <div class="sidebar-module">
     <h4>网站推荐</h4>
-    <a href="https://www.binance.net/cn/register/?ref=11190872" title="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易，目前上架的币种数量为 166 个。" target="_blank">币安</a>
+    <a href="https://www.binancezh.com/cn/register/?ref=11190872" title="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易，目前上架的币种数量为 166 个。" target="_blank">币安</a>
     <a href="https://bitfinex.com/?refcode=YY_G7svd" title="Bitfinex 是主要数字资产和加密货币（包括比特币、以太坊、EOS、莱特币、瑞波币、NEO、门罗币和许多其他货币）的全功能现货交易平台。" target="_blank">大B</a>
     <a href="https://www.huobi.co/zh-cn/topic/invited/?invite_code=szre3" title="火币，OTC 成交量最大的交易所" target="_blank">火币</a>
     <a href="https://www.gate.io/signup/619472" title="The Gate of Blockchain Assets Exchange" target="_blank">Gate</a>
