[Theme] Add links

--- a/_includes/Donate.html
+++ b/_includes/Donate.html
@@ -1,4 +1,8 @@
 <div class="sidebar-module">
   <h4>赞助</h4>
   <a target="_blank" href="https://www.binancezh.com/cn/register/?ref=11190872"><img title="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易" src="https://cdn.dbarobin.com/binance.png" alt="币安是全球领先的数字货币交易平台，提供比特币、以太坊、BNB 以及 USDT 交易"/></a>
+  <br/>
+  <a target="_blank" href="https://www.huobi.co/zh-cn/topic/invited/?invite_code=szre3"><img title="火币全球站是最安全的比特币交易平台，提供比特币、莱特币、以太坊等多币种实时价格行情走势图，拥有最多数字货币交易及投资信息，买比特币就上火币网。" src="https://cdn.dbarobin.com/huobi.png" alt="火币全球站是最安全的比特币交易平台，提供比特币、莱特币、以太坊等多币种实时价格行情走势图，拥有最多数字货币交易及投资信息，买比特币就上火币网。"/></a>
+  <br/>
+  <a target="_blank" href="https://shop.ledger.com/pages/ledger-nano-x?r=3f8656b670de"><img title="Trusted hardware for blockchain applications" src="https://cdn.dbarobin.com/ledger.png" alt="Trusted hardware for blockchain applications"/></a>
 </div>
