[Theme] Add links

--- a/_includes/Donate.html
+++ b/_includes/Donate.html
@@ -4,5 +4,11 @@
   <br/>
   <a target="_blank" href="https://www.huobi.co/zh-cn/topic/invited/?invite_code=szre3"><img title="火币全球站是最安全的比特币交易平台，提供比特币、莱特币、以太坊等多币种实时价格行情走势图，拥有最多数字货币交易及投资信息，买比特币就上火币网。" src="https://cdn.dbarobin.com/huobi.png" alt="火币全球站是最安全的比特币交易平台，提供比特币、莱特币、以太坊等多币种实时价格行情走势图，拥有最多数字货币交易及投资信息，买比特币就上火币网。"/></a>
   <br/>
+  <a target="_blank" href="https://bitfinex.com/?refcode=YY_G7svd"><img title="Bitfinex is the world's leading digital asset trading platform." src="https://cdn.dbarobin.com/bitfinex.png" alt="Bitfinex is the world's leading digital asset trading platform."/></a>
+  <br/>
+  <a target="_blank" href="https://www.gate.io/signup/619472"><img title="Gate.io was created to enable a new generation of global traders with the tools to access the revolutionary age of Cryptocurrencies" src="https://cdn.dbarobin.com/gateio.png" alt="Gate.io was created to enable a new generation of global traders with the tools to access the revolutionary age of Cryptocurrencies"/></a>
+  <br/>
+  <a target="_blank" href="https://www.vultr.com/?ref=8442314-6G"><img title="Vultr is strategically located in 16 datacenters around the globe and provides frictionless provisioning of public cloud, storage and single tenant bare metal" src="https://cdn.dbarobin.com/vultr.png" alt="Vultr is strategically located in 16 datacenters around the globe and provides frictionless provisioning of public cloud, storage and single tenant bare metal"/></a>
+  <br/>
   <a target="_blank" href="https://shop.ledger.com/pages/ledger-nano-x?r=3f8656b670de"><img title="Trusted hardware for blockchain applications" src="https://cdn.dbarobin.com/ledger.png" alt="Trusted hardware for blockchain applications"/></a>
 </div>
