[Theme] Fix bug

--- a/_includes/Donate.html
+++ b/_includes/Donate.html
@@ -8,7 +8,7 @@
   <br/>
   <a target="_blank" href="https://www.gate.io/signup/619472"><img title="Gate.io was created to enable a new generation of global traders with the tools to access the revolutionary age of Cryptocurrencies" src="https://cdn.dbarobin.com/gateio.png" alt="Gate.io was created to enable a new generation of global traders with the tools to access the revolutionary age of Cryptocurrencies"/></a>
   <br/>
-  <a target="_blank" href="https://www.vultr.com/?ref=8442314-6G"><img title="Vultr is strategically located in 16 datacenters around the globe and provides frictionless provisioning of public cloud, storage and single tenant bare metal" src="https://cdn.dbarobin.com/vultr.png" alt="Vultr is strategically located in 16 datacenters around the globe and provides frictionless provisioning of public cloud, storage and single tenant bare metal"/></a>
+  <a target="_blank" href="https://www.vultr.com/?ref=8442314-6G"><img title="Vultr is strategically located in 16 datacenters around the globe and provides frictionless provisioning of public cloud, storage and single tenant bare metal" src="https://cdn.dbarobin.com/vultr.jpg" alt="Vultr is strategically located in 16 datacenters around the globe and provides frictionless provisioning of public cloud, storage and single tenant bare metal"/></a>
   <br/>
   <a target="_blank" href="https://shop.ledger.com/pages/ledger-nano-x?r=3f8656b670de"><img title="Trusted hardware for blockchain applications" src="https://cdn.dbarobin.com/ledger.png" alt="Trusted hardware for blockchain applications"/></a>
 </div>
