[Theme] Add trezor

--- a/_includes/Donate.html
+++ b/_includes/Donate.html
@@ -11,4 +11,6 @@
   <a target="_blank" href="https://www.vultr.com/?ref=8442314-6G"><img title="Vultr is strategically located in 16 datacenters around the globe and provides frictionless provisioning of public cloud, storage and single tenant bare metal" src="https://cdn.dbarobin.com/vultr.jpg" alt="Vultr is strategically located in 16 datacenters around the globe and provides frictionless provisioning of public cloud, storage and single tenant bare metal"/></a>
   <br/>
   <a target="_blank" href="https://shop.ledger.com/pages/ledger-nano-x?r=3f8656b670de"><img title="Trusted hardware for blockchain applications" src="https://cdn.dbarobin.com/ledger.png" alt="Trusted hardware for blockchain applications"/></a>
+  <br/>
+  <a target="_blank" href="https://shop.trezor.io/?offer_id=10&aff_id=4110"><img title="The safe place for your coins." src="https://cdn.dbarobin.com/trezor.png" alt="The safe place for your coins."/></a>
 </div>
